# Pytato

./: .gitignore  Day1.pptx  Day2.pptx  README.md  make_all.sh
doc/pub/html/: ._book000.html  ._book001.html  ._book002.html  ._book003.html  ._book004.html  ._book005.html  ._book006.html  ._book007.html  ._book008.html  ._book009.html  ._book010.html  ._book011.html  ._book012.html  ._book013.html  ._book014.html  ._book015.html  ._book016.html  ._book017.html  ._book018.html  ._book019.html  ._book020.html  ._book021.html  ._book022.html  ._book023.html  ._book024.html  ._book025.html  ._book026.html  ._book027.html  ._book028.html  ._book029.html  ._book030.html  ._book031.html  ._book032.html  ._book033.html  ._book034.html  ._book035.html  ._book036.html  ._book037.html  ._book038.html  ._book039.html  (+44 more)
doc/src/: scripts.py
doc/src/book/: book.do.txt  fig-advanced  fig-classes  fig-exercises  fig-func  fig-functions  fig-import  fig-intro  index.rst  make.sh  make_all.sh  make_html.sh  scripts.py  src-adv  src-advanced  src-classes  src-func  src-functions  src-import  src-intro
doc/src/modules/: make.sh  make_html.sh  mkdir.sh  papers.bib  papers.pub  papers.pub.bak  pictures.pptx  venues.list
doc/src/modules/adv/: adv.do.txt  main_adv.do.txt  make.sh
doc/src/modules/code_structure/FreshStart/: README.md  pyproject.toml
doc/src/modules/code_structure/FreshStart/FreshStart/: __init__.py
doc/src/modules/code_structure/FreshStart/FreshStart/code/: data.py  util.py
doc/src/modules/code_structure/FreshStart/FreshStart/tests/: test_code.py
(+246 files in other folders)
